# project-vox

./: .gitignore  Makefile  diarize_and_transcribe.py  docker-compose.yml  monologe.MOV  pyproject.toml  requirements.txt  vox_main.py
api/: README.md
api/app/: __init__.py  bootstrap.py  main.py  settings.py
api/mappers/: job_request_mapper.py  job_response_mapper.py
api/models/: job.py
api/routes/: jobs.py
api/services/: job_service.py
app/: bootstrap.py  main.py  settings.py
core/app/: bootstrap.py  main.py
core/job/: job.py
core/media/: __init__.py  diarizer.py  diarizer_backend.py  ffmpeg_utils.py  transcriber.py  transcriber_backend.py
core/output/: __init__.py  s3_output_uploader.py  staging_output_uploader.py  uploader.py
core/pipeline/: __init__.py  context.py  job_runner.py  stage.py
core/pipeline/stages/: __init__.py  align_transcript_stage.py  cleanup_stage.py  diarize_audio_stage.py  download_input_stage.py  extract_audio_stage.py  (+9 more)
core/utils/: __init__.py  binary.py  command.py
core/worker/: message_mapper.py  worker.py
proto/vox/: common.proto  job_request.proto  job_result.proto  job_status.proto
scripts/: submit_job.py  submit_job_api.py
tests/: test_diarize_and_transcribe.py
tests/job/: test_job.py
tests/media/: test_ffmpeg.py
tests/output/: test_s3_output_uploader.py  test_staging_output_uploader.py
tests/pipeline/: test_job_runner.py
tests/utils/: test_command.py
tests/worker/: test_message_mapper.py  test_worker.py
vox/: common_pb2.py  job_request_pb2.py  job_result_pb2.py  job_status_pb2.py
(+18 files in other folders)
