[project]
name = "vox-engine-core"
version = "0.1.0"
description = "Core audio processing engine for media normalization, transcription, and diarization"
requires-python = ">=3.10"
dependencies = []

[tool.black]
line-length = 100
target-version = ["py310"]
skip-string-normalization = false

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # import sorting
]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra -q"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true